--- a/Dipolrelaxation/content/diskussion.tex
+++ b/Dipolrelaxation/content/diskussion.tex
@@ -1,4 +1,28 @@
 \newpage
 \section{Diskussion}
 \label{sec:Diskussion}
+Der Literaturwert für die Aktiwierungsenergie liegt bei W = 0,66 eV und der für die Relaxationszeit bei $10^{-18}$ s bis $10^{-22}$ s \cite{muccillo}.
+Die in Tabelle \ref{tab:ergebnisse} zusammengefassten Ergebnisse liegen bei der Aktivierungsenergie in der selben Größenordnung.
+Dabei liegen die Ergebnisse der zweiten Messung, mit der niedrigeren Heitzrate näher am Literaturwert. 
+Dies könnte daran liegen, dass die Heizrate bei der ersten Messung weniger konstant war, da erst ein Gespür für die Handhabung aufgebaut werden musste.
+Ebenfalls auffällig ist, dass die Ergebnisse des Polarisationsansatzes weiter vom Literaturwert entfernt sind als die des Integralansatzes.
+Dies ist verwunderlich, da vorallem bei der Integralmethode kleine Abweichungen durch das Bilden des Logarithmus, so wie das Anwenden von statistischen Methoden, wie die Integration, zu stärkeren Abweichungen führen sollte.
+Die ermittelten Relaxationszeiten liegen zwei bis sieben Größenordnungen entfernt vom Literaturwert.
+Auffällig sind die Sehr großen Unsicherheiten, die bei beiden Methoden auftreten.
 
+
+\begin{table}[h]
+    \centering
+    \caption{Zusammenfassung der ermittelten Werte für die Aktivierungsenergie $W$, sowie die Relaxationszeit $\tau$.}
+    \label{tab:ergebnisse}
+    \begin{tabular}{c c c c c}
+      \toprule
+      &\multicolumn{2}{c}{Methode 1} &\multicolumn{2}{c}{Methode 2}\\
+      \cmidrule(lr){2-3}\cmidrule(lr){4-5}
+                   &$W \, / \, \si{\electronvolt}$  &$\tau \, / \, \si{\second}$ & $W \, / \, \si{\electronvolt}$    & $\tau \, / \, \si{\minute}$   \\
+      \midrule
+      Messung 1    & $0.92 \pm 0.05$              & $(4 \pm 10) \cdot 10^{-16}$    & $0.72 \pm 0.10$                 & $(2.82 \pm 12.62) \cdot 10^{-12}$  \\   
+      Messung 2    & $0.88 \pm 0.05$              & $(3 \pm 0.65) \cdot 10^{-16}$  & $0.69 \pm 0.09$                 & $(19.45 \pm 83.32) \cdot 10^{-12}$  \\   
+      \bottomrule
+    \end{tabular}
+  \end{table}
