--- a/Dipolrelaxation/content/theorie.tex
+++ b/Dipolrelaxation/content/theorie.tex
@@ -14,10 +14,11 @@ In ihrem Grundzustand und ohne äußere Anregung ist die räumliche Orientierung
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth,keepaspectratio]{Depolarisationsstrom}
-\label{fig:Depolarisationsstrom}
 \caption{Typische Verläufe des Depolarisationsstroms in Abbhängigkeit von der Temparatur für unterschiedliche elektrische Feldstärken}
+\label{fig:Depolarisationsstrom}
 \end{figure}
-mit der Boltzmann-Konstante $k_B$ und der charakteristischen Relaxationszeit $\tau_0=\tau(T=\infty)$ als materialspezifische Konstante. Durch die Relaxation der Dipole und die daraus folgende Ladungsverschiebung entsteht ein Strom, welcher an der Probe gemesssen werden kann. Dieser Strom ist temparaturabhängig und zeiigt typischerweise Verläufe wie in Abbildung $\ref{fig:Depolarisationsstrom}$.
+mit der Boltzmann-Konstante $k_B$ und der charakteristischen Relaxationszeit $\tau_0=\tau(T=\infty)$ als materialspezifische Konstante. Durch die Relaxation der Dipole und die daraus folgende Ladungsverschiebung entsteht ein Strom, welcher an der Probe gemesssen werden kann. 
+Dieser Strom ist temparaturabhängig und zeiigt typischerweise Verläufe wie in Abbildung \ref{fig:Depolarisationsstrom}.
 \subsection{Berechnung der Aktivierungsenergie}
 \subsubsection{Stromdichteansatz}
 Um zunächst den Polarisationsstrom in Abhängigkeit von der Temparatur und daraus resultierend später die Aktivierungsenergie zu bestimmen gibt es verschiedene Ansätze. Die Debeye-Polarisation
@@ -38,6 +39,7 @@ Im Bereich der Kurve vor dem Maximum kann nun die Annahme getroffen werden, dass
 Nun ergibt sich durch logarithmieren der Gleichung der Zusammenhang:
 \begin{equation}
 \ln(I)=\frac{W}{k_BT}+\ln\left(\frac{N_pp^2E}{3k_BT\tau_0}\right)
+\label{equ:1}
 \end{equation}
 Dadurch werden alle unbekannten Konstanten zusammangefasst und durch den linearen Zusammenhang zwischen dem Logarithmus des Stroms und dem Kehrwert der Temparatur lässt sich die Aktivierungsenergie durch eine einfache lineare Regression als Steigung $m$ der Gerade durch $W=mk_B$ berechnen. Das logarithmieren kompensiert außerdem die Tatsache, dass der Strom und nicht die Stromdichte gemessen wurde, da sich beide nach dem logarithmieren nur um eine Konstante unterscheiden.
 \subsection{Polarisationsansatz}
@@ -52,10 +54,12 @@ und unter Ausnutzung der Tatsache, dass die Änderung der Gesamtpolarisation dem
 gewinnen. Aus dieser Gleichung lässt sich durch Einsetzen in die ursprüngliche Formel für die Relaxationszeit und umformen die Gleichung
 \begin{equation}
 \frac{W}{k_BT}=\ln\left(\frac{\int^{\infty}_TI(T')dT'}{I(T)b\tau_0}\right)
+\label{equ:2}
 \end{equation}
 herleiten aus der wiederum per Ausgleichsrechnung die Aktivierungsenergie gewonnen werden kann. Im Gegensatz zu der ersten Formel lässt sich dies auf den gesamten Kurvenverlauf anwenden.
 \section{Bestimmung der Relaxationsdauer}
 Ein weiterer zu bestimmender Parameter ist die Relaxationsdauer $\tau_0$. Um diese zu bestimmen wird ausgenutzt, dass die Änderung des Stroms am Maximum bei der Temparatur $T_{max}$ verschwindet. Durch ableiten von Gleichung $\ref{eq:IStromdichteansatz}$ ergibt sich die Formel
 \begin{equation}
 \tau_0=\frac{k_BT_{max}^2}{Wb}\exp\left(-\frac{W}{k_BT_{max}}\right)
+\label{equ:3}
 \end{equation}
