--- a/Dipolrelaxation/lit.bib
+++ b/Dipolrelaxation/lit.bib
@@ -1,1 +1,8 @@
-
+@article{muccillo,
+  author = {Muccillo, R. and Rolfe, J.},
+  title = {Effect of Irradiation on Impurity-Vacancy Dipoles in $\ce{K Br}$ Crystalls Doped with Strontium},
+  journal = {phisica status solidi},
+  volume = {61},
+  pages = {579--587},
+  year = {1974}
+}
