--- a/Dipolrelaxation/content/auswertung.tex
+++ b/Dipolrelaxation/content/auswertung.tex
@@ -2,7 +2,7 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
-\subsection{Untergrnd}
+\subsection{Untergrund}
 \label{sec:Untergrund}
 Die Messwerte füe beide Heizraten sind in Abbildung \ref{fig:1} abgebildet. 
 Dabei sind die gemessenen Ströme in pA gegen die Temperatur der Probe in K aufgetragen.
@@ -128,7 +128,7 @@ ergibt sich die Aktivierungsenergie zu
 \subsection{Aktivierungsenergie - Integralansatz}
 \label{sec:int}
 
-Bei der Integralmethode wird nach Gleichung \ref{equ:2}, $\frac{1}{T}$ gegen $\text{ln} \left( \frac{\int_{T}^{\inf} I(T^{'}) \text{d}T^{'}}{b \tau_0 \cdot I(T)} \right)$ aufgetragen und eine lineare Ausgleichsrechnung der Formel
+Bei der Integralmethode wird nach Gleichung \ref{equ:2}, $\frac{1}{T}$ gegen $\text{ln} \left( \frac{\int_{T}^{\infty} I(T^{'}) \text{d}T^{'}}{b \tau_0 \cdot I(T)} \right)$ aufgetragen und eine lineare Ausgleichsrechnung der Formel
 
 \begin{equation}
     y = m \cdot x + b
