--- a/Dipolrelaxation/content/diskussion.tex
+++ b/Dipolrelaxation/content/diskussion.tex
@@ -3,12 +3,13 @@
 \label{sec:Diskussion}
 Der Literaturwert für die Aktiwierungsenergie liegt bei W = 0,66 eV und der für die Relaxationszeit bei $10^{-18}$ s bis $10^{-22}$ s \cite{muccillo}.
 Die in Tabelle \ref{tab:ergebnisse} zusammengefassten Ergebnisse liegen bei der Aktivierungsenergie in der selben Größenordnung.
-Dabei liegen die Ergebnisse der zweiten Messung, mit der niedrigeren Heitzrate näher am Literaturwert. 
+Dabei liegen die Ergebnisse der zweiten Messung, mit der höheren Heitzrate näher am Literaturwert. 
 Dies könnte daran liegen, dass die Heizrate bei der ersten Messung weniger konstant war, da erst ein Gespür für die Handhabung aufgebaut werden musste.
 Ebenfalls auffällig ist, dass die Ergebnisse des Polarisationsansatzes weiter vom Literaturwert entfernt sind als die des Integralansatzes.
 Dies ist verwunderlich, da vorallem bei der Integralmethode kleine Abweichungen durch das Bilden des Logarithmus, so wie das Anwenden von statistischen Methoden, wie die Integration, zu stärkeren Abweichungen führen sollte.
 Die ermittelten Relaxationszeiten liegen zwei bis sieben Größenordnungen entfernt vom Literaturwert.
-Auffällig sind die Sehr großen Unsicherheiten, die bei beiden Methoden auftreten.
+Auffällig sind die sehr großen Unsicherheiten, die bei beiden Methoden auftreten.
+Ein Teil der Abweichungen zwischen Messung und Literatur kann durch die hohe Empfindlichkeit des Picoampermeters, auf Bewegungen in seiner Nähe, erklärt werden.
 
 
 \begin{table}[h]
