--- a/Dipolrelaxation/content/theorie.tex
+++ b/Dipolrelaxation/content/theorie.tex
@@ -14,7 +14,7 @@ In ihrem Grundzustand und ohne äußere Anregung ist die räumliche Orientierung
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth,keepaspectratio]{Depolarisationsstrom}
-\caption{Typische Verläufe des Depolarisationsstroms in Abbhängigkeit von der Temparatur für unterschiedliche elektrische Feldstärken}
+\caption{Typische Verläufe des Depolarisationsstroms in Abbhängigkeit von der Temparatur für unterschiedliche elektrische Feldstärken \cite{fuller}.}
 \label{fig:Depolarisationsstrom}
 \end{figure}
 mit der Boltzmann-Konstante $k_B$ und der charakteristischen Relaxationszeit $\tau_0=\tau(T=\infty)$ als materialspezifische Konstante. Durch die Relaxation der Dipole und die daraus folgende Ladungsverschiebung entsteht ein Strom, welcher an der Probe gemesssen werden kann. 
