--- a/Dipolrelaxation/lit.bib
+++ b/Dipolrelaxation/lit.bib
@@ -6,3 +6,17 @@
   pages = {579--587},
   year = {1974}
 }
+
+@manual{anleitung,
+  author = {TU Dortmund},
+  title = {V48- Dipolrelaxation in Ionenkristallen},
+  year = 2022
+}
+
+
+@manual{fuller,
+  author = {R. G. Fuller},
+  title = {Research Project for Undergraduates: Ionic Thermoconductivity in Dielectrics.},
+  year = 1972
+}
+
