Operationsverstärker - Theorie hinzugefügt

--- a/Operationsverstärker/content/durchfuehrung.tex
+++ b/Operationsverstärker/content/durchfuehrung.tex
@@ -1,3 +1,21 @@
 
 \section{Durchführung}
 \label{sec:Durchführung}
+Die in Kapitel \ref{sec:Theorie} dargestellten Schaltungen, werden nach vorbild ihrer jeweiligen Abbildungen aufgebaut und getestet.
+
+\begin{itemize}
+    \item Bei dem invertierten Linearverstärker wird eine Sinusspannung eingegeben und anschließend für verschiedene Frequenzen die Amplitude, so wie die Phasendifferenz zwischen Eingangs- und Ausgangsspannung gemessen.
+        Dies wird für drei verschiedene Verhältnisse zwischen $R_1$ und $R_2$ durchgeführt.
+
+    \item Beim Integrator, so wie Differentiator werden ebenfalls die Amplituden der Ausgangsspannung bei verschiedenen Frequenzen einer eingehenden Sinusspanung untersucht.
+        Zusätzlich werden über einen Signalgenerator Dreiecks- und Rechtecksspannungen als eingangsspannung genutzt und das Verhalten der Ausgangsspannung mit hilfe eines Oszilloskops untersucht.
+
+    \item Beim Schmitt-Trigger wird der Schwellenwert gesucht. Dafür wird die Eingangsspannung so lange erhöht, bis die Ausgansspannung ihr Vorzeichen wechselt.
+        Zudem wird der Schwellenwert mit Hilfe einer Dreiecksspannung ermittelt. Dafür wird eine Dreiecksspannung als eingangsspannung angelegt, die deutlich größer als der Schwellenwert ist.
+    	Durch ein Oszilloskop kann dann der Schwellenwert abgelesen werden.
+
+    \item Beim Signalgenerator werden sowohl die Ausgangsspannungdes Schmitt-Triggers, so wie die des Integrators, auf einem Oszilloskop abgebildet und verglichen.
+
+    \item Bei der gedämpften harmonischen Schwingung werden die Eingangs- und Ausgangsspannung auf dem Oszilloskop dargestellt und untersucht.
+
+\end{itemize}
