--- a/Operationsverstärker/main.tex
+++ b/Operationsverstärker/main.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
 \subject{Fortgeschrittenenpraktikum}
-\title{Template}
+\title{V51 - Operationsverstärker}
 
 \begin{document}
 
