--- a/Operationsverstärker/content/diskussion.tex
+++ b/Operationsverstärker/content/diskussion.tex
@@ -1,3 +1,7 @@
 \newpage
 \section{Diskussion}
 \label{sec:Diskussion}
+Die Messungen des invertierenden Verstärkers zeigen sehr gut die Frequenzabhängigkeit der Amplitude auf. Durch den gut erkennbaren linearen Verlauf war die Grenzfrequenz ohne Probleme bestimmbar und auch die konstante Verstärkung liegt im aus der Theorie erwarteten Bereich. Abhängig vom Verhältnis der Widerstände ist allerdings der konstante Bereich des Verlaufs nicht in allen Messreihen gleich gut zu erkennen. Dies wird dadurch bestärkt, dass die Messwerte in linearen Abständen gewählt wurden und somit auf einer logarithmischen Skala in den niedrigen Größenordnungen Messwerte fehlen. Weiterhin können Innenwiederstände und andere Störeffekte, die in dem Modell eines idealen Operationsverstärkers nicht berücksichtigt sind Gründe für Abweichungen sein. Die Frequenzabhängigkeit der Phase lässt zwar qulitativ den Verlauf erkennen, die Messung ist jedoch sehr ungenau und stark gestreut. Dies liegt vermutlich daran, dass die Phasenverschiebung mit bloßem Auge anhand der Verschiebung auf dem Oszilloskop abgelesen wurde, was sehr fehleranfällig ist. \\
+Die Messungen der Integrator und Differentiator Schltungen konnten erfolgreich den jeweiligen aus der Theorie erwarteten Verlauf der Verstärkung in Abhängigkeit von der Frequenz nachweisen. Durch das Anlegen verschiedener Spannungsformen konnte außerdem die Eigenschaft der Schaltungen das Eingangssignal zu integrieren bzw. zu differenzieren gezeigt werden.\\
+Für den Schmitt Trigger konnten die beiden Kipppunkte mit zwei unterschiedlichen Methoden mit geringer Unsicherheit sehr präzise mit Abweichungen von  $4,5\%$ und $2,3\%$ vom Theoriewert bestimmt werden. \\
+Im Gegensatz dazu konnten bei den Generator-Schaltungen zwar die erwarteten Schwingungen erzeugt und vermessen werden, die gemessenen Werte weichen jedoch mit $34,8\%$ und $50\%$ für Frequenz und Amplitude der ungedämpften Schwingung sowie $31,2\%$ für die Periodendauer der gedämpften Schwingung deutlich von den berechneten Theoriewerten ab. Dies ist vor allem deshalb verwunderlich, weil die Ergebnisse qualitativ sehr gut zu den Erwartungen passen und keine der experimentellen Messungen mit großen Unsicherheiten behaftet sind. Dies legt einen systematischen Fehler, beispielsweise in den für die Berechnung der Theoriewerte verwendeten Konstanten nahe. 
